# angler-lang

./: .gitignore  LICENSE  README.md  angler.cabal  shell.nix
src/: Main.hs  MixfixParser.hs  PrettyShow.hs
src/Language/Angler/: AST.hs  AST2.hs  ASTCompact.hs  Compact.hs  Error.hs  MixfixParser.hs  Monad.hs  Options.hs  Program.hs  ScopedTable.hs  SrcLoc.hs  SymbolTable.hs
src/Language/Angler/Parser/: LP.hs  Lexer.x  Parser.hs  Parser.y  Token.hs
test/: List.ang  all.ang  decl.ang  idenfix.ang  lexer.ang  operators.ang  parser.ang  type.ang
test/lexer/fail/: literal_character.ang
test/lexer/pass/: literal_character.ang
test/mixfix/: fail.ang
test/parser/fail/: noarglambda.ang  nobindselect.ang  nobodylet.ang  noexprall.ang  noexprexst.ang  noexprlambda.ang  noexprlet.ang  novarall.ang  novarexst.ang
