name:                   angler
version:                0.1.0.0
cabal-version:          >=1.10

license:                BSD3
license-file:           LICENSE

build-type:             Simple

author:                 Matteo Ferrando
maintainer:             Matteo Ferrando <matteo.ferrando2@gmail.com>

category:               Programming Language, Dependent Types
synopsis:               Angler Functional Programming Language
description:
  Angler is ...

homepage:               https://github.com/angler-lang

extra-source-files:     README.md

bug-reports:            https://github.com/angler-lang/angler-lang/issues
source-repository head
  type:                 git
  location:             https://github.com/angler-lang/angler-lang.git


executable angler
  hs-source-dirs:       src
  main-is:              Main.hs

  build-tools:          alex, happy
  other-modules:          Language.Angler.Parser.Lexer
                        , Language.Angler.Parser.Parser

  default-extensions:   TemplateHaskell
  other-extensions:     RankNTypes, FlexibleContexts

  build-depends:          base >=4.8 && <4.9
                                -- GHC 7.10
                        , array
                                -- alex
                        , containers
                                -- alex, Data.Sequence
                        , data-default
                                -- Data.Default
                        , directory
                                -- System.Directory
                        , lens
                                -- Control.Lens
                        , megaparsec
                                -- Text.Megaparsec
                        , mtl
                                -- MonadTrans
                        , utf8-string
                                -- Codec.Binary.String.UTF8
  default-language:     Haskell2010
  -- ghc-options:          -Wall -Werror
  ghc-options:          -Wall
