name:                   angler
version:                0.1.0.0
cabal-version:          >=1.10

license:                BSD3
license-file:           LICENSE

build-type:             Simple

author:                 Matteo Ferrando
maintainer:             Matteo Ferrando <matteo.ferrando2@gmail.com>

category:               Programming Language, Dependent Types
synopsis:               Angler Functional Programming Language
description:
  Angler is ...

homepage:               https://github.com/angler-lang

extra-source-files:     README.md

bug-reports:            https://github.com/angler-lang/angler-lang/issues
source-repository head
  type:                 git
  location:             https://github.com/angler-lang/angler-lang.git


executable angler
  hs-source-dirs:       src
  main-is:              Main.hs

  build-tools:          alex, happy
  other-modules:          Language.Angler.Parser.Lexer
                        , Language.Angler.Parser.Parser

  default-extensions:     TemplateHaskell

  other-extensions:       RankNTypes
                        , FlexibleContexts
                        , ConstraintKinds
                        , MultiParamTypeClasses

  build-depends:          base >=4.8 && <4.9
                                -- GHC 7.10
                        , array
                                -- alex
                        , containers
                                -- alex, Data.Sequence
                        , clock
                                -- time measurement, System.Clock
                        , data-default
                                -- Data.Default
                        , directory
                                -- System.Directory
                        , filepath
                                -- System.FilePath
                        , lens
                                -- Control.Lens
                        , megaparsec >=4.2 && <5
                                -- Text.Megaparsec
                        , mtl
                                -- MonadTrans
                        , utf8-string
                                -- Codec.Binary.String.UTF8
  default-language:     Haskell2010

  -- ghc-options:          -Wall -Werror -j4 -O2
  ghc-options:          -Wall -j4 -O2

  -- profiling options
  -- ghc-options:          -Wall -j4 -O2 -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
